@@ -1,0 +1,10 @@
+
+
+DBOBJECTS
+
+$Id$
+
+This is some very promising code that provides substantial automated integration
+between Itcl classes and PostgreSQL.
+
+
