@@ -1,6 +1,11 @@
 
 $Id$
 
+2004-11-29 Karl Lehenbauer <karl-pg@sc.com>
+    * Add library of useful PostreSQL helper functions to the playpen.
+
+    * Add dbobjects PostgreSQL/Itcl-object interface package to the playpen.
+
 2004-11-23 Karl Lehenbauer <karl-pg@sc.com>
     * Simplify result object processing
 
